fix job CI